--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,10 @@
+@import "roboto.css";
+@import "~normalize.css";
+
+body {
+    font-family: 'Roboto', 'sans-serif';
+}
+
 .container {
     padding-top: 8rem;
     max-width: 1000px;
@@ -6,4 +13,16 @@
 
 h1 {
     text-align: center;
+}
+
+.logo {
+    background-image: url('../assets/webpack-splash.png');
+    background-size: cover;
+    height: 200px;
+    width: 200px;
+    margin: 0 auto;
+}
+
+.code {
+    color: crimson;
 }
